--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-color: #040C18;
+    background: linear-gradient(to right, #040C18,#002853);
     padding: 0 100px;
 }
 
@@ -593,5 +593,99 @@ footer{
 
     .foottxt button {
         margin-top: 20px;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .text{
+        padding-top: 0px;
+    }
+
+    .hero{
+        margin-top: 70px;
+        text-align: center;
+    }
+
+    
+    form input{
+        width: 100%;
+        margin-bottom: 20px;
+    }
+
+    span{
+        color: #FFFFFF;
+        font-size: 18px;
+    }
+
+    .gradient{
+        height: 1200px;
+        padding: 50px 50px;
+        text-align: center;
+        border-radius: 30px;
+    }
+
+    .gradient h3{
+        font-size: 30px;
+    }
+
+    .gradient p {
+        font-size: 20px;
+    }
+
+    br{
+        display: none;
+    }
+
+    .xplor, .xplor1, .xplor2 {
+        margin-top: 30px;
+    }
+
+    .early{
+        text-align: center;
+    }
+
+    .feature {
+        padding-left: 0;
+        margin-top: 70px;
+    }
+
+    .feat1{
+        margin-top: 20px;
+    }
+
+    .gradback{
+        margin-top: 70px;
+        text-align: center;
+        height: 220px;
+    }
+
+    .grad{
+        padding: 20px 0px;
+
+    }
+
+    .gradbut{
+        padding: 0px;
+    }
+
+    .cards {
+        margin-top: 70px;
+    }
+
+    .cards h2 {
+        text-align: center;
+        font-size: 50px;
+    }
+
+    .card1{
+        margin-bottom: 48.46px;
+    }
+
+    footer{
+        margin-top: 70px;
+    }
+
+    .foottxt h2 {
+        font-size: 50px;
     }
 }
