--- a/style.css
+++ b/style.css
@@ -435,11 +435,20 @@ footer{
 /* footer section styling ends */
 @media screen and ( max-width: 1300px) {
    body{
-    padding: 0 20px;
+    padding: 0 50px;
+   }
+   .gradient{
+    padding: 50px 50px;
+   }
+   .feat1{
+    margin-top: 150px;
    }
 }
 
 @media screen and (max-width: 600px){
+    body{
+        padding: 0 20px;
+    }
     .text{
         padding: 50px 30px;
     }
@@ -487,10 +496,11 @@ footer{
     }
 
     .gradient{
-        height: 1100px;
+        height: 1500px !important;
         text-align: center;
         padding: 30px 0;
         border-radius: 20px;
+    
     }
 
     .gradient h3{
@@ -507,7 +517,7 @@ footer{
 
     .early{
         text-align: center;
-        margin-top: 60px;
+        margin-top: 100px;
     }
 
     .early2 p{
@@ -539,8 +549,8 @@ footer{
     .gradback{
         margin-top: 40px;
         text-align: center;
-        padding: 20px 0;
-        height: 250px;
+        padding: 20px !important;
+        height: 250px !important;
     }
 
     .grad{
@@ -687,5 +697,73 @@ footer{
 
     .foottxt h2 {
         font-size: 50px;
+    }
+}
+
+@media screen and (max-width: 1100px) {
+    a {
+        margin-right: 20px;
+        font-size: 16px;
+    }
+
+    .sgin, .sgup {
+        font-size: 16px;
+        margin-top: 15px;
+    }
+
+    .text{
+        padding-top: 40px;
+    }
+
+    br{
+        display: none;
+    }
+
+    .hero2 h1{
+        font-size: 50px;
+        line-height: 60px;
+    }
+
+    .hero p {
+        font-size: 18px;
+        margin-top: 20px;
+    }
+
+    form{
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+
+    span {
+        color: #FFFFFF;
+    }
+
+    .images img{
+        margin-left: 20px;
+    }
+
+    .gradient{
+        padding: 30px 20px;
+        border-radius: 20px;
+    }
+
+    .feat1 {
+        margin-top: 130px;
+    }
+
+    .feature{
+        padding-left: 100px;
+    }
+
+    .gradback {
+      padding: 0px;
+    }
+
+    .grad {
+        padding: 20px 20px;
+    }
+
+    .gradbut button{
+        width: 150px;
     }
 }
