--- a/style.css
+++ b/style.css
@@ -496,7 +496,7 @@ footer{
     }
 
     .gradient{
-        height: 1500px !important;
+        height: 1600px !important;
         text-align: center;
         padding: 30px 0;
         border-radius: 20px;
@@ -530,8 +530,8 @@ footer{
     }
 
     .feature{
-        padding-left: 0px;
-        margin-top: 50px;
+        padding-left: 0px !important;
+        margin-top: 50px !important;
     }
 
     .featimg img{
@@ -550,7 +550,7 @@ footer{
         margin-top: 40px;
         text-align: center;
         padding: 20px !important;
-        height: 250px !important;
+        height: 290px !important;
     }
 
     .grad{
@@ -655,7 +655,7 @@ footer{
     }
 
     .feature {
-        padding-left: 0;
+        padding-left: 0 !important;
         margin-top: 70px;
     }
 
@@ -666,7 +666,7 @@ footer{
     .gradback{
         margin-top: 70px;
         text-align: center;
-        height: 220px;
+        height: 250px !important;
     }
 
     .grad{
