--- a/style.css
+++ b/style.css
@@ -450,7 +450,7 @@ footer{
 
 @media screen and (max-width: 600px){
     body{
-        padding: 0 20px;
+        padding: 0 10px;
     }
     .text{
         padding: 50px 30px;
@@ -461,9 +461,13 @@ footer{
     }
     
     .hero2 h1 {
-        font-size: 30px;
-        line-height: 35px;
+        font-size: 25px !important;
+        line-height: 30px !important;
         text-align: center;
+    }
+
+    .hero {
+        margin-top: 20px !important;
     }
 
     .hero p {
@@ -478,6 +482,9 @@ footer{
     form{
         text-align: center;
     }
+form button{
+    width: 100%;
+}
 
     .herimg{
         width: 100%;
@@ -503,6 +510,7 @@ footer{
         text-align: center;
         padding: 30px 0;
         border-radius: 20px;
+        margin-top: 30px;
     
     }
 
@@ -553,7 +561,7 @@ footer{
         margin-top: 40px;
         text-align: center;
         padding: 20px !important;
-        height: 290px !important;
+        height: auto !important;
     }
 
     .grad{
@@ -565,7 +573,8 @@ footer{
     }
 
     .gradbut button {
-        width: 100%;
+        width: 100% !important;
+        
     }
 
     .gradback h3{
@@ -576,12 +585,14 @@ footer{
 
     .cards{
         margin-top: 100px;
+    
     }
 
     .cards h2{
         line-height: normal;
         text-align: center;
         margin-bottom: 50px;
+        font-size: 25px !important;
     }
 
     .card1{
@@ -602,6 +613,7 @@ footer{
 
     .foottxt h2{
         line-height: normal;
+        font-size: 25px !important;
     }
 
     .foottxt button {
@@ -669,7 +681,7 @@ footer{
     .gradback{
         margin-top: 70px;
         text-align: center;
-        height: 250px !important;
+        /* height: 250px !important; */
     }
 
     .grad{
